--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "esm": "^3.2.25",
-    "mocha": "^8.2.1",
-    "supertest": "^6.0.1"
+    "mocha": "^8.2.1"
   }
 }
