Created a new env to test the database

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "SET NODE_ENV=development&& nodemon --exec node -r esm ./bin/www",
     "start": "SET NODE_ENV=production&& node -r esm ./bin/www",
-    "test": "SET NODE_ENV=test&& mocha -r esm ./tests/*.js --timeout 10000 --exit"
+    "test": "SET NODE_ENV=test&& mocha -r esm ./tests/*.js --timeout 10000 --exit",
+    "test-db": "SET NODE_ENV=test-db&& mocha -r esm ./tests/*.js --timeout 10000 --exit"
   },
   "author": "Santiago",
   "license": "ISC",
