--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "SET NODE_ENV=development&& nodemon --exec node -r esm ./bin/www",
     "start": "SET NODE_ENV=production&& node -r esm ./bin/www",
-    "test": "SET NODE_ENV=test&& mocha -r esm ./tests/*.js --timeout 10000 --exit",
-    "test-db": "SET NODE_ENV=test-db&& mocha -r esm ./tests/*.js --timeout 10000 --exit"
+    "test": "SET NODE_ENV=test&& mocha -r esm --timeout 10000 --exit"
   },
   "author": "Santiago",
   "license": "ISC",
@@ -21,8 +20,8 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
     "esm": "^3.2.25",
+    "faker": "^5.1.0",
     "mocha": "^8.2.1"
   }
 }
