--- a/config/production.json5
+++ b/config/production.json5
@@ -2,7 +2,7 @@
    DB_CONFIG: {
       DOMAIN: 'localhost:27017',
       PORT: 27017,
-      DB_NAME: 'Tasks',
+      DB_NAME: 'MyTasksAppDB',
    },
    SERVER_CONFIG: {
       DOMAIN: 'mysupertast.com',
