--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.0",
     "config": "^3.3.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "express-validator": "^6.8.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.7",
