--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "esm": "^3.2.25"
