--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "validator": "^13.5.2"
