--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "huebee": "^2.1.1",
     "materialize-css": "^1.0.0-rc.2",
     "next": "10.0.3",
     "react": "17.0.1",
