--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "huebee": "^2.1.1",
     "materialize-css": "^1.0.0-rc.2",
+    "mb-react-color-picker": "^1.3.0-dev.0",
     "next": "10.0.3",
     "react": "17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "17.0.1"
   }
 }
