--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ package-lock.json
 
 # production
 /build
+cache/
 
 # misc
 .DS_Store
@@ -18,9 +19,6 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# vercel
-.vercel
 
 # back-end
 api
