--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "todo-one",
+  "version": "1.0.0",
   "private": true,
+  "description": "Todo One",
+  "author": "SGS-J",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "materialize-css": "^1.0.0-rc.2",
-    "mb-react-color-picker": "^1.3.0-dev.0",
-    "next": "10.0.3",
-    "react": "17.0.1",
+    "autoprefixer": "^10.2.3",
+    "next": "^10.0.5",
+    "postcss": "^8.2.4",
+    "react": "^16.13.1",
     "react-color": "^2.19.3",
-    "react-dom": "17.0.1"
+    "react-dom": "^16.13.1",
+    "tailwindcss": "^2.0.2"
   }
 }
