--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,21 @@
-# testing
-/coverage
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# nodejs
-node_modules
-
-# npm
-package-lock.json
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
 # production
 /build
-cache/
 
 # misc
 .DS_Store
-*.pem
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# back-end
-api
+package-lock.json
