--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^5.0.0-beta3",
+    "@popperjs/core": "^2.9.3",
+    "bootstrap": "^5.1.0",
     "react": "^17.0.2",
+    "react-avatar-edit": "^1.0.0",
+    "react-color": "^2.19.3",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
