--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.1.0",
+    "install": "^0.13.0",
     "react": "^17.0.2",
     "react-avatar-edit": "^1.0.0",
     "react-color": "^2.19.3",
