--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "install": "^0.13.0",
     "react": "^17.0.2",
     "react-avatar-edit": "^1.0.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
-    "react-draggable": "^4.4.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.38.0",
