--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@popperjs/core": "^2.9.3",
     "bootstrap": "^5.1.0",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-avatar-edit": "^1.0.0",
     "react-beautiful-dnd": "^13.1.0",
