--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "lodash": "^4.17.21",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-avatar-edit": "^1.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-color": "^2.19.3",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "sass": "^1.60.0"
   }
