--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # testing
 /coverage
+dummy.json
 
 # next.js
 /.next/
@@ -19,14 +20,20 @@
 .DS_Store
 *.pem
 
+# editor
+.vscode
+
+# npm
+package-lock.json
+
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
-.env*.local
+# env files
+/config
 
 # vercel
 .vercel
