--- a/package.json
+++ b/package.json
@@ -2,22 +2,40 @@
   "name": "my-fast-task",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon ./server/start",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "cross-env NODE_ENV=production&& node ./server/start"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
+    "config": "^3.3.9",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "mongoose": "^6.11.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "next": "13.2.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-avatar-edit": "^1.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-color": "^2.19.3",
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "validator": "^13.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
