--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon ./server/start",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production&& node ./server/start"
+    "start": "cross-env NODE_ENV=production&& node ./server/start",
+    "debug": "cross-env NODE_ENV=debug&& nodemon ./server/start"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
