--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
   "scripts": {
     "dev": "nodemon ./server/start",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production&& node ./server/start",
-    "debug": "cross-env NODE_ENV=debug&& nodemon ./server/start"
+    "start": "cross-env NODE_ENV=production && node ./server/start"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
     "config": "^3.3.9",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
@@ -38,6 +36,7 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.22"
   }
 }
