--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-date-picker": "^10.0.3",
     "react-dom": "18.2.0",
     "sass": "^1.60.0",
+    "swr": "^2.2.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
